<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WaterActivity"
    android:background="@drawable/background_water_novije">

    <ProgressBar
        android:id="@+id/determinateBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progress="25"/>

<androidx.cardview.widget.CardView
    android:id="@+id/waterGore"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:cardCornerRadius="40dp"
    android:backgroundTint="@color/prozirno2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="9dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/blue"
        android:gravity="center"
        android:backgroundTint="@color/prozirno">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waterHeadingTxt"
            android:fontFamily="@font/linden_hill"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="15dp">

        </TextView>
    </LinearLayout>
</androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/addWaterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_waterBtn"
        app:layout_constraintTop_toBottomOf="@id/waterGore"
        app:layout_constraintBottom_toTopOf="@id/addWaterCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="25sp"
        android:backgroundTint="@color/prozirno2"/>

<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/addWaterCardView"
    app:layout_constraintBottom_toTopOf="@id/resetWaterIntakeBtn"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:backgroundTint="@color/prozirno2"
    app:cardCornerRadius="20dp">
    <TextView
        android:id="@+id/hydrationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="30sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:fontFamily="@font/linden_hill"
        android:gravity="start"
        android:layout_marginHorizontal="9dp"
        />
</androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/addWaterCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="15dp"
        android:backgroundTint="@color/prozirno3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:backgroundTint="@color/prozirno">

            <EditText
                android:id="@+id/ammountOfWaterTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="13"
                android:gravity="center"
                android:hint="@string/AddingWaterHintText"
                android:inputType="number"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Add"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/prozirno2"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/waterPod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="9dp"
        android:backgroundTint="@color/prozirno2"
        app:cardCornerRadius="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:backgroundTint="@color/prozirno"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/view2"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:elevation="12dp"
                android:backgroundTint="@color/prozirno2"
                app:cardCornerRadius="40dp"
                android:layout_marginStart="35dp">

                <ImageView
                    android:id="@+id/homeButtonIMG"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="2.5dp"
                    app:srcCompat="@drawable/home_logo" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/view1"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:elevation="12dp"
                android:backgroundTint="@color/prozirno2"
                app:cardCornerRadius="40dp"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp">

                <ImageView
                    android:id="@+id/foodButtonIMG"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/foodBtn"
                    app:srcCompat="@drawable/food_logo"
                    android:layout_marginStart="2.5dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewHome"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:elevation="12dp"
                android:backgroundTint="@color/prozirno2"
                app:cardCornerRadius="40dp"
                android:layout_marginEnd="35dp">

                <ImageView
                    android:id="@+id/profileButtonIMG"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/profile_logo"
                    android:layout_marginStart="2.5dp"
                    android:text="@string/profileBtn"/>

            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/resetWaterIntakeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_water_intake_Btn_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addWaterCardView"
        android:backgroundTint="@color/prozirno2"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>